<resources>
    <string name="app_name">globars</string>
    <string name="enter">Войти</string>
    <string name="password">Пароль</string>
    <string name="name">Имя</string>

    <string name="title_activity_map">MapActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
</resources>